# xo

./: .gitignore  CMakeLists.txt  bot.c  bot.h  game.c  game.h  main.c  rendering.c  rendering.h  tic_tac_toe
